# dive-into-haskell

./: .gitignore  README  README.md  daily.org  notes  notes.markdown  toda.org  todo.org
GUI/stockwatcher/: LICENSE  stockwatcher.cabal
LYGH/: BirdsPole.hs  KnightQuest.hs
codes/GADT/: Bar.hs  Error1.hs  Foo.hs
codes/GUI/grapefruit/: hello.hs
codes/GUI/gtk/: HelloGtk.hs
codes/euler/: Makefile  p104.hs  p12-2.hs  p14-1.hs  p47.hs
codes/functional-test/: query-cis.hs
codes/game/: tic-tac-toe.hs
codes/hdbc/: UnifiedBuild.hs  query.hs  test1.db
codes/intro-type-level-programming/: CHANGELOG.md  intro-type-level-programming.cabal  readme.md  readme.org
codes/intro-type-level-programming/app/: App1.hs  App2.hs  App3.hs  Color.hs  Main.hs
codes/lens/: my-lens-v1.hs  my-lens-v2.hs  my-lens-v3.hs
codes/monad/: Parsering.hs  another-mtl-example.hs  ask-password.hs  hello-mtl.hs  test-state-monad.hs
codes/mylib/: LICENSE
codes/number/: number.gv
codes/sandbox/: buy-iphone.hs  cyclic-automorphisms.hs  max-two-dim-array.hs  one-in-arith-seq.hs  repeat-insert.hs
codes/sandbox/currency/: currency.hs
codes/stg-to-js/: CHANGELOG.md  LICENSE  README.md  stg-to-js.cabal
codes/stg-to-js/src/: CodeGen.hs  Example.hs  Lib.hs  Main.hs
codes/type-family/: Main.hs  Main2.hs  README.md  data-kind.hs
codes/type-level-programming/: ProxyVsTypeApplication.hs  TypeLiterals.hs  data-family-xlist.hs  data-family1.hs  data-family2.hs  data-kind.hs  type-synonym-families.hs  typo-synonym-families.hs
codes/web/cgi/: input.hs
codes/web/hello-snap/: hello-snap.cabal
codes/xml/: simple1.hs
euler/: p104.hs  p12  p12-1.hs  p12-2.hs  p12.hs  p14-1.hs  p14-2.hs  p41.hs  p47.hs  prof.sh
game/: tic-tac-toe.hs
grapefruit/: install
gtk/glade/: GladeTest.hs  simple.glade
hakyll/hakyllsample/: README.txt  about.markdown  index.markdown  mathhack.rst  pandoc.markdown
hdbc/: UnifiedBuild.hs  mysql.hs
io/: MaxSizeFile.hs  exe01.hs  hangman.hs  nimgame.hs
json/: PutJSON.hs
lectures/edx-FP101x/: countdown.lhs  exe-4.7.hs  lab4.hs
lectures/informatics1-FP/: README.md
monad/: 1.hs  knight-queue.hs  newtype-deriving.hs
mylib/: mylib.cabal
number/: fib2.hs  fib3.hs  number.gv
papers/: 01.the-essence-of-the-iterator-pattern.org  02.when-you-should-use-lists-in-haskell.org  03.functional.pearl.applicative-programming-with-effects.org
prime/: LICENSE  Primeing.hs  prime.cabal
problems/: fizzbuzz.hs
problems/reports/: OrderDB.txt  SalesDB.txt  main.hs
problems/solve-maze/: map1.txt  map2.txt  maze.hs
questions/: 1To10.hs
readings/: notes.org
readings/Haskell-in-Depth/: readme.org
readings/LYGH/: KnightQuest.hs  knight-queue.hs
readings/haskell-book/: 01.org  02.org  03.org  04.org  05.org  06.org  07.org  08.org  09.org  10.org  11.org  12.org  13.org  14.org  15.org  16.org  17.org  18.org  19.org  20.org  21.org  22.org  23.org  24.org  25.org  26.org  27.org  28.org  29.org  30.org  31.org  ghci.org  haskell-book.cabal  readme.org
readings/haskell-book/13/hangman-hw/: hangman-hw.cabal
readings/haskell-book/13/hangman-hw/app/: Main.hs
readings/haskell-book/26/morra/: CHANGELOG.md  Main.hs  morra.cabal
readings/introduction-to-FP/: README.md
readings/lambda-viewer/: Bases.hs  README  Types.hs  exe2.hs  exe3.hs  exe4.hs  exe5.hs  exe6.hs
readings/monad-for-fp/: my-monad.hs
readings/pearls-of-FP/: 01-min-free-number.hs  LICENSE  README.md  pears-of-fp.cabal
readings/pearls-of-FP/app/: Main.hs
readings/pearls-of-FP/src/: MinFreeNumber.hs
readings/pearls-of-FP/test/: MinFreeNumberSpec.hs  Spec.hs
readings/programming-in-haskell/: Parsing.hs  arithmetic-parser.hs  countdown.hs  heap.hs  heap.sh
readings/real-world-haskell/: ch01_wc.hs  ch02_lastButOne.hs  ch02_myDrop.hs  ch03_BookStore.hs  ch03_Lending.hs  ch03_MySecond.hs  ch03_exercies.hs
readings/real-world-haskell/json/: JSON.hs  Main.hs  json.cabal
readings/thinking-with-types/: CHANGELOG.md  HelloBuildInTypes.hs  HelloDataKinds.hs  HelloRanks.hs  Main.hs  TicTacToe.hs  notes.org  thinking-with-types.cabal
readings/thinking-with-types.org/: notes.org
sandbox/: Fold.hs  Primeing.hs  UnitTest.hs  existential-types.lhs  max-size-file.hs  one-in-arith-seq.hs  read-file.hs
stockwatcher/: Makefile  StockWatcher.hs  stockwatcher.glade
test/: LICENSE  QuickCheck.cabal  Test.hs  Tests.hs
test/quickcheck/: LICENSE  quickcheck.cabal
test/src/: HelloQuickCheck.hs  main.hs
videos/Haskell-for-Imperative-Programmers/: 26-strictness-thunk-seq.org  31-weak-head-normal-form.org  readme.md
videos/edx-FP101x/: README.md  lab2.hs  lab3.hs  node.md  parsing.lhs
web/: snap.md  testOpenId.hs
web/cgi/: hello.hs  notes.markdown
xml/: SvnXmlResult.hs
yesod/helloyesod/: Controller.hs  Helloyesod.hs  README  client_session_key.aes  debug.db3  helloyesod.cabal
yesod/misc/: subsite.hs  test-http.hs
(+268 files in other folders)
