name:                pears-of-fp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/freizl/dive-into-haskell
license:             BSD3
license-file:        LICENSE
author:              Haisheng Wu
maintainer:          freizl@gmail.com
copyright:           2016 Haisheng Wu
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MinFreeNumber
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable pearls-of-fp
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

test-suite pearls-of-fp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  Other-Modules:       MinFreeNumberSpec
  build-depends:       base
                     , pears-of-fp
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/freizl/dive-into-haskell
