cabal-version:      2.4
name:               hangman-hw
version:            0.1.0.0
synopsis: Playing Hangman

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Haisheng Wu (M)
maintainer:         freizl@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: data/dict.txt

executable hangman-hw
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.0.0
                    , random
                    , split
    hs-source-dirs:   app
    default-language: Haskell2010
